package controller.menu;

public interface Opciones {
    public void ejecutarByNum(String opc);
    public String[] getDescs(); 
}
