package model;

public class Tripulante {

}
