package model.domainobjects;

import java.io.Serializable;

public class Historico implements Serializable, SistemaSGTE{
    
}
