package model.domainobjects.naves;

public class NaveMilitar {
    
}
