package model.domainobjects.naves;

public class NaveTuristica {
    
}
