@startuml SGTE

package "View/Controller" <<Folder>> {
    class Menu {}
    interface Opciones {}

    Menu -u-* Opciones

    class Gestiones {}
    class SubGestiones {}
    class MainSGTE {}

    MainSGTE .r.> Gestiones
    Gestiones ..|> Opciones
    Gestiones ..> SubGestiones
    SubGestiones .l.|> Opciones

    MainSGTE ..> Menu
}

Model -l[hidden]-> "View/Controller"

package Model <<Folder>>
{

    package Repository <<Database>> {
        package estaciones <<Database>>{

        }

        package cargamentos <<Database>>{

        }

        package naves <<Database>>{

        }

        package historico <<Database>>{

        }

        historico -[hidden]l-> naves
        naves -[hidden]l-> cargamentos
        cargamentos -[hidden]l-> estaciones
    }

    package "Domain Objects" <<Frame>> {

        class Historico
        {
            - codEstacion : String
            - codNave : String
            - horaEntrada : DateTime
            - horaSalida : DateTime
            - codDescargado : String
            - codCargado : String
            - razon : String
        }
        class Estacion
        {
            - codigo : String
            - nombre : String
            - localizacion : String
        }

        abstract class Nave
        {
            - codigo : String
            - nombre : String
            - tripulantes : List<Tripulante>    
        }

        class NaveCargamento {}

        class NaveMilitar {}

        class NaveTuristica {}

        class Tripulante
        {
            - cargo : String
            - area : String
        }

        class Cargamento
        {
            - codigo : String
            - nombre : String
            - tipo : String
            - peso : float
        }

        Nave -up-> Historico : es referenciado
        Estacion -up-> Historico : es referenciado
        Cargamento -up-> Historico : es referenciado

        Nave "1" o-- "n" Tripulante : tiene

        
        Nave <|-- NaveCargamento : es
        Nave <|-- NaveMilitar : es
        Nave <|-- NaveTuristica : es
    }

    Repository -[hidden]-> "Domain Objects"

    class "DataMapper<T>"{
        - fich : File
        + addObject(T t) : boolean
        + readObject(String cod) : T t
        + updateObject(String cod) : boolean
        + deleteObject(String cod) : boolean
    }
    
    "Domain Objects" <.. "DataMapper<T>" : instancia
    Repository <.. "DataMapper<T>" : CRUD
    
}

SubGestiones ..> "DataMapper<T>"
